--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -101,7 +101,7 @@ title: "Labour market: August 2018"
           <blockquote class="header-quote">
             <img style="" src="{{ "/assets/img/quote.png" | relative_url }}" class="margin-bottom--2" alt="">
             <p class="margin-bottom--2">Between January to March 2018 and April to June 2018, the numbers of people in work and economically inactive increased while the numbers of unemployed people decreased.</p>
-            <p class="font-xsmall"><span class="font-weight--bold">Rob Kent Smith,</span> Head of National Accounts</p>
+            <p class="font-xsmall"><span class="font-weight--bold">Sarah Smith,</span> Head of Labour Market Statistics</p>
           </blockquote>
         </div>
       </div>
@@ -137,6 +137,9 @@ title: "Labour market: August 2018"
               </li>
               <li>
                 <a href="#more-about">More about labour market</a>
+              </li>
+              <li>
+                <a href="#methodology-links">Useful labour market methodology</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -322,7 +325,7 @@ title: "Labour market: August 2018"
           </div>
 
           <h2 id="data" class="margin-top--7">Labour market data</h2>
-            <p>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
+            <p>Labour market estimates from the Labour Force Survey (LFS), a survey of households.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/uklabourmarket/august2018/relateddata">View all data</a></p>
 
           <h2 id="using-data" class="margin-top--7">Using labour market data</h2>
@@ -346,12 +349,14 @@ title: "Labour market: August 2018"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  How do we measure this?</p>
+                  Measuring labour market data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
-                <p>The most robust estimates of short-term movements in these estimates are obtained by comparing the estimates for April to June 2018 with the estimates for January to March 2018, which were first published on 15 May 2018. This provides a more robust estimate than comparing with the estimates for March to May 2018. This is because the April and May 2018 data are included within both estimates, so effectively observed differences are those between the individual months of March and June 2018. </p>
-                <p>The LFS is sampled such that it is representative of the UK population over a three- month period, not for single month periods.</p>
+                <p><strong>Where does the data come from?</strong><br>
+                Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
+                <p><strong>How is it measured?</strong><br>
+                Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
+                <p>Everybody aged 16 years or over is either employed, unemployed or economically inactive. The employment estimates include all people in paid work including those working part-time.</p>
               </div>
             </div>
           </div>
@@ -359,27 +364,12 @@ title: "Labour market: August 2018"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  What do you need to know?</p>
+                  Strengths and limitations</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p><strong>About labour market statuses</strong><br>
-                Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
-                <p>Everybody aged 16 years or over is either employed, unemployed or economically inactive. The employment estimates include all people in paid work including those working part-time. </p>
-                <p>People not working are classed as unemployed if they have been looking for work within the last four weeks and are able to start work within the next two weeks. A common misconception is that the unemployment statistics are a count of people on benefits; this is not the case as they include unemployed people not claiming benefits.</p>
-                <p>Jobless people who have not been looking for work within the last four weeks or who are unable to start work within the next two weeks are classed as economically inactive. Examples of economically inactive people include people not looking for work because they are students, looking after the family or home, because of illness or disability or because they have retired.</p>
-                <p><strong>Accuracy and reliability of survey estimates</strong><br>
-                Most of the figures in this statistical bulletin come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information is available in A guide to labour market statistics.</p>
-
-                <p class="margin-bottom--0"><strong>Useful labour market methodology</strong></p>
-                  <ul>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/labourforcesurveylfsqmi">Labour Force Survey Quality and Methodology Information</a></li>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyperformanceandqualitymonitoringreports">Labour Force Survey performance and quality monitoring reports</a></li>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/vacancysurveyqmi">Vacancy Survey Quality and Methodology Information</a></li>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/workforcejobsqmi">Workforce Jobs Quality and Methodology Information</a></li>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/methodologies/averageweeklyearningsqmi">Average weekly earnings (AWE) Quality and Methodology Information</a></li>
-                    <li><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/workplacedisputesandworkingconditions/methodologies/labourdisputesinquiryqmi">Labour Disputes Quality and Methodology Information</a></li>
-                  </ul>
-
+                <p>Most of the figures in this statistical bulletin come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information is available in A guide to labour market statistics.</p>
+                <p>The most robust estimates of short-term movements in these estimates are obtained by comparing the estimates for April to June 2018 with the estimates for January to March 2018, which were first published on 15 May 2018. This provides a more robust estimate than comparing with the estimates for March to May 2018. This is because the April and May 2018 data are included within both estimates, so effectively observed differences are those between the individual months of March and June 2018. </p>
+                <p>The LFS is sampled such that it is representative of the UK population over a three-month period, not for single month periods.</p>
               </div>
             </div>
           </div>
@@ -440,6 +430,17 @@ title: "Labour market: August 2018"
             </ul>
           </div>
 
+          <h2 id="methodology-links" class="margin-top--7">Useful labour market methodology</h2>
+          <div class="content-box">
+              <ul class="list--neutral margin-top--4">
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/labourforcesurveylfsqmi">Labour Force Survey Quality and Methodology Information</a></li>
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyperformanceandqualitymonitoringreports">Labour Force Survey performance and quality monitoring reports</a></li>
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/vacancysurveyqmi">Vacancy Survey Quality and Methodology Information</a></li>
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/qmis/workforcejobsqmi">Workforce Jobs Quality and Methodology Information</a></li>
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/methodologies/averageweeklyearningsqmi">Average weekly earnings (AWE) Quality and Methodology Information</a></li>
+                <li><a class="font-weight--bold" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/workplacedisputesandworkingconditions/methodologies/labourdisputesinquiryqmi">Labour Disputes Quality and Methodology Information</a></li>
+              </ul>
+          </div>
 
           <h2 id="more-links" class="margin-top--7">You may also be interested in</h2>
           <div class="content-box">
