--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -265,9 +265,8 @@ title: "Employment"
           <h2 id="using-data" class="margin-top--7">Using employment data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title">
-                  <p class="heading-small">
-                  Glossary</p>
+              <div class="js-show-hide__title">
+                <p class="heading-small">Glossary</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Employment</strong><br>
@@ -281,29 +280,31 @@ title: "Employment"
           </div>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title">
-                  <p class="heading-small">
-                  How do we measure this?</p>
+              <div class="js-show-hide__title">
+                <p class="heading-small">Measuring employment</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>The most robust estimates of short-term movements in these estimates are obtained by comparing the estimates for April to June 2018 with the estimates for January to March 2018, which were first published on 15 May 2018. This provides a more robust estimate than comparing with the estimates for March to May 2018. This is because the April and May 2018 data are included within both estimates, so effectively observed differences are those between the individual months of March and June 2018. The LFS is sampled such that it is representative of the UK population over a three- month period, not for single month periods.</p>
-                </div>
+              <p><strong>Where does the data come from?</strong><br>
+              Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
+              <p><strong>How is it measured?</strong><br>
+              Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
+              <p>Everybody aged 16 years or over is either employed, unemployed or economically inactive. The employment estimates include all people in paid work including those working part-time. </p>
+              <p>People not working are classed as unemployed if they have been looking for work within the last four weeks and are able to start work within the next two weeks. A common misconception is that the unemployment statistics are a count of people on benefits; this is not the case as they include unemployed people not claiming benefits.</p>
+              <p>Jobless people who have not been looking for work within the last four weeks or who are unable to start work within the next two weeks are classed as economically inactive. Examples of economically inactive people include people not looking for work because they are students, looking after the family or home, because of illness or disability or because they have retired.</p>
+              </div>
             </div>
           </div>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title">
-                  <p class="heading-small">
-                  What do you need to know?</p>
+              <div class="js-show-hide__title">
+                <p class="heading-small">Strengths and limitations</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>Employment measures the number of people aged from 16 to 64 years in paid work. It differs from the number of jobs because some people have more than one job.</p>
-                <p>Everybody aged 16 years or over is either employed, unemployed or economically inactive. The employment estimates include all people in paid work including those working part-time.</p>
-                <p><strong>Accuracy and reliability of survey estimates</strong></br>
-                Most of the figures come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information on the labour market overview page.</p>
-                <p><strong>Where to find explanatory information</strong></br>
-                A <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#abstract">Guide to labour market statistics</a>, which includes a Glossary, is available.</p>
-              </div>
+                <p>Most of the figures in this statistical bulletin come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information is available in <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics">A guide to labour market statistics</a>.</p>
+                <p>The most robust estimates of short-term movements in these estimates are obtained by comparing the estimates for April to June 2018 with the estimates for January to March 2018, which were first published on 15 May 2018.</p>
+                <p>This provides a more robust estimate than comparing with the estimates for March to May 2018. This is because the April and May 2018 data are included within both estimates, so effectively observed differences are those between the individual months of March and June 2018.</p>
+                <p>The LFS is sampled such that it is representative of the UK population over a three- month period, not for single month periods.</p>
+                </div>
             </div>
           </div>
           <!-- <div class="js-show-hide">
