--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -194,7 +194,7 @@ title: "Average weekly earnings"
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
           <p class="heading-medium">Average regular and total pay increases in nominal terms</p>
-          <p class="list-heading">  For June 2018 in nominal terms (that is, not adjusted for price inflation):</p>
+          <p class="list-heading">For June 2018 in nominal terms (that is, not adjusted for price inflation):</p>
           <ul>
             <li>average regular pay (excluding bonuses) for employees in Great Britain was £488 per week before tax and other deductions from pay, up from £474 per week for a year earlier</li>
             <li>average total pay (including bonuses) for employees in Great Britain was £518 per week before tax and other deductions from pay, up from £507 per week for a year earlier</li>
@@ -235,10 +235,10 @@ title: "Average weekly earnings"
               <span class="summary">Where to find data about average weekly earnings</span>
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
-              <p>Estimates of average weekly earnings in nominal terms (that is, not adjusted for consumer price inflation) are available at Tables 13, 14 and 15 of the PDF version of this statistical bulletin and at datasets <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">EARN01</a>, <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">EARN02</a> and <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbyindustryearn03">EARN03</a>.</p>
-              <p>Estimates of average weekly earnings in real terms (that is, adjusted for consumer price inflation) are available at Table 16 of the PDF version of this statistical bulletin and at <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">dataset EARN01</a>.</p>
-              <p>While comparable records for average weekly earnings start in 2000, modelled estimates of average weekly earnings in nominal terms back to 1963 (which do not have National Statistics status) are available at <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">dataset EARN02</a>.</p>
-              <p>Historic estimates (which do not have National Statistics status) have been published by the Bank of England in the spreadsheet <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (at worksheets A47 and A48).</p>
+              <p>Estimates of average weekly earnings in nominal terms: datasets <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">EARN01</a>, <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">EARN02</a> and <a href="http://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbyindustryearn03">EARN03</a>.</p>
+              <p>Estimates of average weekly earnings in real terms: <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsearn01">dataset EARN01</a>.</p>
+              <p>Modelled estimates of average weekly earnings in nominal terms back to 1963: <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/earningsandworkinghours/datasets/averageweeklyearningsbysectorearn02">dataset EARN02</a>.</p>
+              <p>Historic estimates published by the Bank of England: <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (worksheets A47 and A48).</p>
             </div>
           </details>
 
@@ -263,11 +263,16 @@ title: "Average weekly earnings"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  How do we measure this?</p>
+                  Measuring average weekly earnings</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p><a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#earnings">Average weekly earnings</a> measures money paid per week, per job to employees in Great Britain in return for work done, before tax and other deductions from pay. The estimates are not just a measure of pay rises as they do not, for example, adjust for changes in the proportion of the workforce who work full-time or part-time, or other compositional changes within the workforce. The estimates do not include earnings of self-employed people.</p>
+                <p><strong>Where does the data come from?</strong><br>
+                Average weekly earnings is based solely on the Monthly Wages and Salaries Survey (MWSS), which covers employees working in businesses with 20 or more employees in all industrial sectors in Great Britain (an adjustment is made for smaller businesses).</p>
+                <p><strong>How is it measured?</strong><br>
+                <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#earnings">Average weekly earnings</a> measures money paid per week, per job to employees in Great Britain in return for work done, before tax and other deductions from pay. The estimates are not just a measure of pay rises as they do not, for example, adjust for changes in the proportion of the workforce who work full-time or part-time, or other compositional changes within the workforce. The estimates do not include earnings of self-employed people or unearned income, benefits in kind or arrears of pay.</p>
                 <p>Estimates are available for both total pay (which includes bonuses) and for regular pay (which excludes bonus payments). Estimates are available in both nominal terms (not adjusted for consumer price inflation) and real terms (adjusted for consumer price inflation). The estimates of average weekly earnings in real terms are calculated by deflating the nominal earnings estimates by the Consumer Prices Index including owner occupiers’ housing costs (CPIH).</p>
+                <p>As well as tracking changes in earnings, AWE makes an explicit estimate of earnings in pounds. Separate estimates are made of bonus and arrears pay. AWE uses employment weights that are recalculated every month. This means that AWE reflects the composition of the workforce at any given time, and that changes between months capture shifts in the workforce as well as changes in earnings within industries. These are both advantages over the former AEI measure, and two of the main reasons for the switch between the measures.</p>
+                <p>As well as pay settlements, the estimates reflect bonuses, changes in the number of paid hours worked and the impact of employees paid at different rates joining and leaving individual businesses. The estimates also reflect changes in the overall structure of the workforce; for example, more low paid jobs in the economy would have a downward effect on the earnings growth rate.</p>
               </div>
             </div>
           </div>
@@ -275,17 +280,11 @@ title: "Average weekly earnings"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
               <div class="js-show-hide__title">
                 <p class="heading-small">
-                What do you need to know?</p>
+                Strengths and limitations</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p>For estimates of short-term pay or earnings growth, the Average Weekly Earnings (AWE) statistic is the source we recommend, providing estimates of monthly and annual change in employees’ average weekly earnings for the main industrial sectors.</p>
-                <p>The estimates relate to Great Britain and the changes in employees’ salaries but not unearned income, benefits in kind or arrears of pay.</p>
                 <p>AWE was accredited a National Statistic in November 2009, and replaced the Average Earnings Index (AEI) as the lead measure of short-term earnings growth in January 2010.</p>
-                <p>AWE is based solely on the Monthly Wages and Salaries Survey (MWSS), which covers employees working in businesses with 20 or more employees in all industrial sectors in Great Britain (an adjustment is made for smaller businesses).</p>
-                <p>As well as tracking changes in earnings, AWE makes an explicit estimate of earnings in pounds. Separate estimates are made of bonus and arrears pay. AWE uses employment weights that are recalculated every month. This means that AWE reflects the composition of the workforce at any given time, and that changes between months capture shifts in the workforce as well as changes in earnings within industries. These are both advantages over the former AEI measure, and two of the main reasons for the switch between the measures.</p>
-                <p>As well as pay settlements, the estimates reflect bonuses, changes in the number of paid hours worked and the impact of employees paid at different rates joining and leaving individual businesses. The estimates also reflect changes in the overall structure of the workforce; for example, more low paid jobs in the economy would have a downward effect on the earnings growth rate.</p>
-                <p><strong>Where to find explanatory information</strong></br>
-                A <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#abstract">Guide to labour market statistics</a>, which includes a Glossary, is available.</p>
               </div>
             </div>
           </div>
