--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -248,10 +248,10 @@ title: "Unemployment: August 2018"
             </summary>
             <div class="panel" id="details-content-1" aria-hidden="false">
               <ul>
-                <li>Unemployment estimates for the UK are available in <a href="http://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationseasonallyadjustedunem01sa">dataset UNEM01 SA</a>.</li>
-                <li>Estimates of employment UK and non-UK workers are available at <a href="#">Non-UK workers in the labour market</a> and at <a href="#">datasets A12</a> and <a href="#">EMP06</a>.</li>
-                <li>Historic estimates of unemployment (which do not have National Statistics status) have been published by the Bank of England in the spreadsheet <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (in worksheets A49 and A50).</li>
-                <li>International comparisons of employment rates are available at dataset A10.</li>
+                <li>Unemployment estimates for the UK: <a href="http://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment/datasets/unemploymentbyageanddurationseasonallyadjustedunem01sa">dataset UNEM01 SA</a>.</li>
+                <li>Estimates of employment UK and non-UK workers: <a href="#">Non-UK workers in the labour market</a> and at <a href="#">datasets A12</a> and <a href="#">EMP06</a>.</li>
+                <li>Historic estimates of unemployment are published by the Bank of England: <a href="https://www.bankofengland.co.uk/statistics/research-datasets">A millennium of macroeconomic data version 3.1</a> (in worksheets A49 and A50).</li>
+                <li>International comparisons of employment rates: dataset A10.</li>
               </ul>
             </div>
           </details>
@@ -264,10 +264,9 @@ title: "Unemployment: August 2018"
                   Glossary</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p><strong>Unemployment</strong><br>
-                The number of unemployed people in the UK is measured through the Labour Force Survey (LFS) following the internationally agreed definition recommended by the International Labour Organisation (ILO) – an agency of the United Nations. Unemployed people are without a job, have actively sought work in the last four weeks and are available to start work in the next two weeks; or are out of work, have found a job and are waiting to start it in the next two weeks</p>
                 <p><strong>Unemployment rate</strong><br>
-                The headline unemployment rate is calculated by dividing the unemployment level for those aged 16 and over by the total number of economically active people aged 16 and over. Economically active is defined as those in employment plus those who are unemployed.</p>
+                  The proportion of the total population who are unemployed. It is the proportion of the economically active population (those in work plus those seeking and available to work) who are unemployed. This follows <a href="http://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm">guidelines specified by the International Labour Organisation</a> and it ensures that UK unemployment statistics are broadly comparable with those published by other countries.</p>
+                  <p>The headline unemployment rate is calculated by dividing the unemployment level for those aged 16 and over by the total number of economically active people aged 16 and over. Economically active is defined as those in employment plus those who are unemployed.</p>
               </div>
             </div>
           </div>
@@ -275,24 +274,26 @@ title: "Unemployment: August 2018"
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
                 <div class="js-show-hide__title">
                   <p class="heading-small">
-                  How do we measure this?</p>
+                  Measuring unemployment data</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>The unemployment rate is not the proportion of the total population who are unemployed. It is the proportion of the economically active population (those in work plus those seeking and available to work) who are unemployed. This follows <a href="http://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm">guidelines specified by the International Labour Organisation</a> and it ensures that UK unemployment statistics are broadly comparable with those published by other countries.</p>
-                </div>
-            </div>
-          </div>
-          <div class="js-show-hide">
-            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
-                <div class="js-show-hide__title">
-                  <p class="heading-small">
-                  What do you need to know?</p>
-              </div>
-              <div class="js-show-hide__content" style="overflow: auto;">
-                <p>People not working are classed as unemployed if they have been looking for work within the last four weeks and are able to start work within the next two weeks. A common misconception is that the unemployment statistics are a count of people on benefits; this is not the case as they include unemployed people not claiming benefits.</p>
+                <p><strong>Where does the data come from?</strong><br>
+                Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</p>
+                <p><strong>How is it measured?</strong><br>
+                People not working are classed as unemployed if they have been looking for work within the last four weeks and are able to start work within the next two weeks. A common misconception is that the unemployment statistics are a count of people on benefits; this is not the case as they include unemployed people not claiming benefits.</p>
                 <p>Jobless people who have not been looking for work within the last four weeks or who are unable to start work within the next two weeks are classed as economically inactive. Examples of economically inactive people include people not looking for work because they are students, looking after the family or home, because of illness or disability or because they have retired.</p>
-                <p><strong>Where to find explanatory information</strong><br>
-                <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics#abstract">A Guide to labour market statistics</a>, which includes a Glossary, is available.</p>
+              </div>
+            </div>
+          </div>
+          <div class="js-show-hide">
+            <div class="show-hide show-hide--light background--gallery margin-bottom--2">
+                <div class="js-show-hide__title">
+                  <p class="heading-small">
+                  Strengths and limitations</p>
+              </div>
+              <div class="js-show-hide__content" style="overflow: auto;">
+                <p>Most of the figures in this statistical bulletin come from surveys of households or businesses and are therefore estimates rather than precise figures. Further information is available in <a href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/aguidetolabourmarketstatistics">A guide to labour market statistics</a>.</p>
+                <p>The LFS is sampled such that it is representative of the UK population over a three-month period, not for single month periods.</p>
               </div>
             </div>
           </div>
