--- a/sprint/3/labour-market/average-weekly-earnings/index.html
+++ b/sprint/3/labour-market/average-weekly-earnings/index.html
@@ -121,16 +121,16 @@ title: "Average weekly earnings"
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
-                <a href="#analysis">Analysis of average week earnings</a>
+                <a href="#analysis">Analysis of average weekly earnings</a>
               </li>
               <li>
                 <a href="#data">Average weekly earnings data</a>
               </li>
               <li>
-                <a href="#using-data">How do we measure this?</a>
+                <a href="#using-data">Measuring average weekly earnings</a>
               </li>
               <li>
-                <a href="#using-data">What do you need to know?</a>
+                <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
                 <a href="#using-data">Glossary</a>
