--- a/sprint/3/labour-market/overview/index.html
+++ b/sprint/3/labour-market/overview/index.html
@@ -124,10 +124,10 @@ title: "Labour market: August 2018"
                 <a href="#data">Labour market data</a>
               </li>
               <li>
-                <a href="#using-data">How do we measure this?</a>
+                <a href="#using-data">Measuring labour market data</a>
               </li>
               <li>
-                <a href="#using-data">What do you need to know?</a>
+                <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
                 <a href="#using-data">Glossary</a>
