--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -124,13 +124,13 @@ title: "Unemployment: August 2018"
                 <a href="#analysis">Analysis of unemployment</a>
               </li>
               <li>
-                <a href="#data">Unmployment data</a>
+                <a href="#data">Unemployment data</a>
               </li>
               <li>
-                <a href="#using-data">How do we measure this?</a>
+                <a href="#using-data">Measuring unemployment data</a>
               </li>
               <li>
-                <a href="#using-data">What do you need to know?</a>
+                <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
                 <a href="#using-data">Glossary</a>
