--- a/sprint/3/labour-market/employment/index.html
+++ b/sprint/3/labour-market/employment/index.html
@@ -126,10 +126,10 @@ title: "Employment"
                 <a href="#data">Employment data</a>
               </li>
               <li>
-                <a href="#using-data">How do we measure this?</a>
+                <a href="#using-data">Measuring employment</a>
               </li>
               <li>
-                <a href="#using-data">What do you need to know?</a>
+                <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
                 <a href="#using-data">Glossary</a>
