--- a/sprint/3/labour-market/unemployment/index.html
+++ b/sprint/3/labour-market/unemployment/index.html
@@ -104,7 +104,7 @@ title: "Unemployment: August 2018"
           <blockquote class="header-quote">
             <img style="" src="{{ "/assets/img/quote.png" | relative_url }}" class="margin-bottom--2" alt="">
             <p class="margin-bottom--2">In April to June 2018 there were 1.36 million unemployed people, 65,000 fewer than for January to March 2018 and 124,000 fewer than a year earlier.</p>
-            <p class="font-xsmall"><span class="font-weight--bold">Rob Kent Smith,</span> Head of National Accounts</p>
+            <p class="font-xsmall"><span class="font-weight--bold">Sarah Smith,</span> Head of Labour Market Statistics</p>
           </blockquote>
         </div>
       </div>
